# MUtility

./: .gitignore  README.md  cleanup.bat
local/: Dummy.txt
project/: CMakeLists.txt  cleanup.bat  generatesolution.bat
script/: generateTODOList.sh  listLinesContainingString.sh
source/: MUtilityBitset.cpp  MUtilityByte.cpp  MUtilityDynamicBitset.cpp  MUtilityFile.cpp  MUtilityIDBank.cpp  MUtilityLog.cpp  MUtilityLogInternal.h  MUtilityMath.cpp  MUtilitySerialization.cpp  MUtilityString.cpp  MUtilitySystem.cpp  MUtilityThreading.cpp  fileUtility.cpp
source/Interface/: MUtilityBitset.h  MUtilityDynamicBitset.h  MUtilityStrongID.h
source/interface/: MUtilityByte.h  MUtilityDataSizes.h  MUtilityFile.h  MUtilityIDBank.h  MUtilityIntrinsics.h  MUtilityLocklessQueue.h  MUtilityLog.h  MUtilityMacros.h  MUtilityMath.h  MUtilityPlatformDefinitions.h  MUtilitySerialization.h  MUtilitySingleton.h  MUtilityString.h  MUtilitySystem.h  MUtilityThreading.h  MUtilityTypes.h  MUtilityWindowsInclude.h  errorUtility.h  fileUtility.h  windowsInclude.h
source/interface/MUtilityExternal/: CallbackRegister.h  Handle.h
